--- a/.github/workflows/main_mysuperjavaapp.yml
+++ b/.github/workflows/main_mysuperjavaapp.yml
@@ -43,6 +43,11 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: MyWebApp
+          
+      - name: Log in to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
