--- a/.github/workflows/main_mysuperjavaapp.yml
+++ b/.github/workflows/main_mysuperjavaapp.yml
@@ -53,7 +53,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'MySuperJavaApp'
+          app-name: 'javawebapp'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_351F75D8CBD7433EBC5CFE08EDC10150 }}
           package: '*.war'
