--- a/.github/workflows/main_spingbootwebapp.yml
+++ b/.github/workflows/main_spingbootwebapp.yml
@@ -1,50 +1,37 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy WAR app to Azure Web App - spingbootwebapp
-
+name: Build and deploy WAR app to Azure Web App
 on:
   push:
     branches:
       - main
   workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Java version
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v2
         with:
-          java-version: '17'
-          distribution: 'microsoft'
-
+          java-version: '11'
+          distribution: 'adopt'
       - name: Build with Maven
-        run: mvn clean install
-
+        run: mvn clean install -f MyWebApp/pom.xml
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: java-app
-          path: '${{ github.workspace }}/target/*.war'
-
+          name: MyWebApp
+          path: '${{ github.workspace }}'
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
     steps:
       - name: Download artifact from build job
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
-          name: java-app
+          name: MyWebApp
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -55,9 +42,9 @@ jobs:
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
+        uses: azure/webapps-deploy@v2
         with:
           app-name: 'spingbootwebapp'
           slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_76B948D486E54ED7B06775D572207D40 }}
           package: '*.war'
-          
